ext/-test-/debug/profile_frames.c
@@ -29,6 +29,7 @@ profile_frames(VALUE self, VALUE start_v, VALUE num_v)
         rb_ary_push(ary, rb_profile_frame_singleton_method_p(buff[i]));
         rb_ary_push(ary, rb_profile_frame_method_name(buff[i]));
         rb_ary_push(ary, rb_profile_frame_qualified_method_name(buff[i]));
+        rb_ary_push(ary, INT2NUM(lines[i]));
 
         rb_ary_push(result, ary);
     }
